# uv-rpc

./: CMakeLists.txt  README.md  cmd.txt
doc/: readme.md  readme_cn.txt
include/: Async.h  BufferPool.h  BufferQue.h  CharVector.h  CommonHeader.h  CommonLog.h  ConnectionManager.h  DataPacket.h  EventLoop.h  GlobalConfig.h  IDispatcher.h  IEncoder.h  ITask.h  IWork.h  LogWriter.h  RawBufferWrapper.h  SimpleMsgDispatcher.h  SocketAddr.h  TcpConnection.h  TcpServer.h  UvTimer.h  WorkerPool.h  log4wraper.h
samples/http/: HttpEncode.h  HttpResDispatcher.h
samples/jsonTask/: JsonMsgDispatcher.cpp  JsonMsgDispatcher.h  jsonDecode.h  jsonEncode.h
samples/pingTest/cient/: CMakeLists.txt  PathlossTask.h  PingEncode.h  PongDispatcher.h  pingClient.cpp
samples/pingTest/client/: PathlossTask.h  PingEncode.h  pingClient.cpp
samples/pingTest/distribute/: PingEncode.h  PongDispatcher.h  broker.cpp  broker.h  distribute.cpp
samples/pingTest/server/: CMakeLists.txt  PingDispatch2Worker.h  PingDispatcher.h  PongEncode.h  PongServer.cpp  WorkAddNum.h
src/: Async.cpp  BufferPool.cpp  ConnectionManager.cpp  EventLoop.cpp  GlobalConfig.cpp  LogWriter.cpp  SimpleMsgDispatcher.cpp  SocketAddr.cpp  TcpConnection.cpp  TcpServer.cpp  UvTimer.cpp  WorkerPool.cpp  log4wraper.cpp
test/: testEventLoop.h  testQue.cpp  testSimpleDispatcher.cpp
third/lib/protobuf_bin/: cmd.txt  pathloss.pb.cc  pathloss.pb.h  pathloss.proto
third/lib/vs2017_x64_debug/: libprotobuf-lited.lib  libprotobufd.lib  libprotocd.lib  uv.exp  uv.ilk  uv.lib  (+1 more)
utils/: Heap.h  SpinLock.h  TimeUtils.h  Timer.h  cmdsetting_w32.h
vs2017/testRpc/: testRpc.sln
(+14 files in other folders)
